--- a/about.html
+++ b/about.html
@@ -11,5 +11,8 @@
 		</p>
 		<a href="https://www.flickr.com/photos/puliarfanita/22959238329">
 		<img src="images/polar_bear.jpg" alt="Polar bear"></a>
+		<p>
+		<a href="index.html">Go back</a>
+		</p>
 	</body>
 </html>
